feat: (processm.services) add logic for saving component state (#29)
Former-commit-id: 970de5cc382bdcfebb5d0ea8bd8333a04058794c
